Add welcome dialogs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="no_table">Der Vertretungsplan wurde noch nicht freigegeben</string>
     <string name="no_internet">Keine Internetverbindung</string>
     <string name="retry">Nochmal</string>
+    <string name="welcome">Willkommen</string>
+    <string name="welcome_message">Dies ist der 3. Anlauf der MPG-Vertretungsplan App mit praktischen Funktionen:\n
+    - Benachrichtungen, welche dich über Änderungen vom Vertretungsplan infomieren\n
+    - Themes (im Moment: Orange, Dark)\n
+    - und für die Oberstufe: Ein Kursfilter\n\n
+    Der Sourcecode der App ist unter:\nhttps://github.com/alxndrx/mpg-vertretungsplan-android\neinsehbar</string>
+    <string name="grade_message">Bitte wählen Ihre Klasse aus</string>
+    <string name="general">Allgemein</string>
 </resources>
