--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="no_table">Der Vertretungsplan wurde noch nicht freigegeben</string>
     <string name="no_internet">Keine Internetverbindung</string>
     <string name="retry">Nochmal</string>
+    <string name="ok">OK</string>
     <string name="welcome">Willkommen</string>
     <string name="welcome_message">Dies ist der 3. Anlauf der MPG-Vertretungsplan App mit praktischen Funktionen:\n
     - Benachrichtungen, welche dich über Änderungen vom Vertretungsplan infomieren\n
@@ -22,5 +23,10 @@
     <string name="pref_category_filter">Filter (nur für die Oberstufe)</string>
     <string name="saved_filter_enabled">filter_enabled</string>
     <string name="action_reload">Neu laden</string>
-    <string name="offline_version">Zeige Offline-Version...</string>
+    <string name="offline_version">Zeige Offline-Version..</string>
+    <string name="pref_title_filter_enabled">Filter aktiv</string>
+    <string name="reloaded_table">Wurde neugeladen..</string>
+    <string name="pref_category_customizing">Individualisierung</string>
+    <string name="pref_title_theme">Theme</string>
+    <string name="saved_theme">theme</string>
 </resources>
