--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="retry">Nochmal</string>
     <string name="ok">OK</string>
     <string name="welcome">Willkommen</string>
-    <string name="welcome_message">Willkommen zur 3. Version der MPG-Vertretungsplan-App mit neuen Funktionen:\n[+] Benachrichtungen, welche dich über Änderungen am Vertretungsplan informieren\n[+] Für die Kursstufen: Ein Filter, welcher einmal eingestellt nur für dich interessante Vertretungen anzeigt\n[+] Kopiere Vertretungen oder Nachrichten ganz einfach in deinen Zwischenspeicher, indem du sie lange gedrückt hälst\n[+] Neue Farben! - Zur Auswahl im Einstellungsmenü bereit\n\nWeiterhin:\n[+] Ein Offline-Modus für Zeiten ohne Internet\n[+] Zwei praktische Anzeigen von den Vertretungsplänen dieser und nächster Woche\n\n\nCopyright © 2018 Alexander Steinhauer\nSourcecode: github.com/alxndrx/mpg-vertretungsplan-android</string>
+    <string name="welcome_message">Willkommen zur 3. Version der MPG-Vertretungsplan-App mit neuen Funktionen:\n[+] Benachrichtigungen, welche dich über Änderungen am Vertretungsplan informieren\n[+] Für die Kursstufen: Ein Filter, welcher einmal eingestellt nur für dich interessante Vertretungen anzeigt\n[+] Kopiere Vertretungen oder Nachrichten ganz einfach in deinen Zwischenspeicher, indem du sie lange gedrückt hälst\n[+] Neue Farben! - Zur Auswahl im Einstellungsmenü bereit\n\nWeiterhin:\n[+] Ein Offline-Modus für Zeiten ohne Internet\n[+] Zwei praktische Anzeigen von den Vertretungsplänen dieser und nächster Woche\n\n\nCopyright © 2018 Alexander Steinhauer\nSourcecode: github.com/alxndrx/mpg-vertretungsplan-android</string>
     <string name="grade_message">Bitte wähle deine Klasse aus</string>
     <string name="general">Allgemein</string>
     <string name="saved_offline_available">offline_available</string>
@@ -26,15 +26,15 @@
     <string name="saved_theme">theme</string>
     <string name="pref_category_notifications">Benachrichtigungen</string>
     <string name="saved_notifications_enabled">notifications_enabled</string>
-    <string name="pref_title_notifications_enabled">Benachrichtungen aktiv</string>
+    <string name="pref_title_notifications_enabled">Benachrichtigungen aktiv</string>
     <string name="notification_channel_name">Neue Vertretungen/Nachrichten</string>
-    <string name="notification_channel_description">Es werden Benachrichtungen verschickt, falls es neue Vertretungen oder Nachrichten für sie gibt</string>
+    <string name="notification_channel_description">Es werden Benachrichtigungen verschickt, falls es neue Vertretungen oder Nachrichten für sie gibt</string>
     <string name="saved_worker_id">worker_id</string>
     <string name="saved_unseen_replacements">unseen_replacements</string>
     <string name="saved_unseen_messages">unseen_messages</string>
     <string name="saved_version_code">version_code</string>
     <string name="changelog_title">Changelog</string>
-    <string name="changelog_message">Version %s:\n[+] Neues Design + Performance-Boost\n[+] Neuer Filter für die Oberstufe (Klasse 11/12)\n[+] Benachrichtungen über Änderungen am Vertretungsplan\n[+] Individualisierung durch Themes\n[+] Halte eine Vertretung/Nachricht länger gedrückt, um sie zu kopieren\n[+] Open-Source Software</string>
+    <string name="changelog_message">Version 3.0:\n[+] Neues Design + Performance-Boost\n[+] Neuer Filter für die Oberstufe (Klasse 11/12)\n[+] Benachrichtigungen über Änderungen am Vertretungsplan\n[+] Individualisierung durch Themes\n[+] Halte eine Vertretung/Nachricht länger gedrückt, um sie zu kopieren\n[+] Open-Source Software</string>
     <string name="error_message">Es ist ein Fehler aufgetreten</string>
     <string name="low_memory">Kann Vertretungspläne nicht speichern (wenig Speicher?)</string>
     <string name="saved_init_preferences">init_preferences</string>
